maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:13: error: ';' expected but '=' found.
    droite(): virages = virages - 1
                      ^